# zimusyoku

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  summary.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: USER_GUIDE_ja.md  conf.py  index.rst
logs/: run-20251023T172138.jsonl
scripts/: dev.bat  dev.ps1
services/: __init__.py
services/accounting/: classify.py  main.py  requirements.txt
services/api/: Dockerfile  __init__.py  app.py  approvals.py  celery_app.py  config.py  dependencies.py  jobs.py  main.py  models.py  repo.py  requirements.txt  routes.py  routes_accounting.py  routes_approvals.py  routes_auth.py  routes_export.py  routes_integrations.py  routes_jobs.py  routes_ocr.py  routes_summary.py  utils.py
services/api/ocr/: __init__.py  amounts.py  details.py  preprocess.py  recognize.py
services/api/tests/: test_amounts.py  test_api.py  test_details.py
services/extractor/: __init__.py
services/extractor/tests/: conftest.py  test_normalizer.py
services/integrations/: __init__.py  bank_api.py  freee_api.py  yayois_api.py
services/ocr/: main.py  requirements.txt  worker.py
src/: __init__.py
src/extractor/: __init__.py  normalizer.py
tests/: test_accounting.py  test_ocr.py
web/console/: .eslintrc.cjs  AGENTS.md  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
web/console/scripts/: run-vitest.mjs
(+36 files in other folders)
